feat: 添加一些功能
- 添加了指示玩家终点的功能
- 增加自动重连功能
- 增加连接状态提示

fix: 修复了一些问题

- 修复了在游戏中打开个人信息页面后返回游戏，棋盘无法同步的问题

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -43,6 +43,7 @@
 
   --border-bg-color: #B0A092;
   --square-color: #A18E80;
+  --square-color-final: #CAAE9B;
   --font-color-on-bg: #534B44;
 }
 
